# agent-swarm-docker

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  demo-report-2.md  demo-report.md  docker-compose.yml  lesson-plan-prd.md  new-report-demo.md  orchestrator.py  pyproject.toml  report.md  requirements.txt  supervisor.py  worker.py
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: __init__.py  base.py  capitalize.py  count_consonants.py  feature_extractor.py  reverse.py  runner.py  slogan_generator.py  translator.py  vowel_random.py
agents/pentest/: __init__.py  nmap_scan.py  pentest_reporter.py
core/: logging.py  registry.py
core/io/: shared_volume.py
core/llm/: __init__.py  base.py  groq_client.py  openai_client.py  openai_compat.py  scripted.py  xai_client.py
core/supervisor/: __init__.py  aggregator.py  prompt.py  supervisor.py
core/swarm/: __init__.py  manager.py  result_watcher.py  service_spec.py
docker/: Dockerfile  compose.dev.yml  docker-stack.yml
docs/: TALK.md  slides.html
scripts/: demo-down.sh  demo-logs.sh  demo-run.sh  demo-up.sh  pen-test-demo.sh
tests/: conftest.py
tests/fixtures/: ci_response.json  talk_prompt_response.json
tests/integration/: test_swarm_e2e.py
tests/unit/: test_base_agent.py  test_dry_run.py  test_llm_base.py  test_llm_openai.py  test_logging.py  test_registry.py  test_registry_tags.py  test_result_watcher.py  test_runner.py  test_supervisor.py  test_supervisor_cli.py  test_swarm_cleanup.py  test_swarm_executor.py  test_swarm_manager.py  (+1 more)
(+9 files in other folders)
